# rust-web-test

./: .env  Cargo.toml
migrations/: 20230712095708_init.down.sql  20230712095708_init.up.sql  20230712203019_v1.up.sql  20230714075235_v2.up.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
src/db/: article.rs  comment.rs  like.rs  user.rs
src/models/: article.rs  claim.rs  comment.rs  like.rs  user.rs
src/routes/: articles.rs  auth.rs  comments.rs  likes.rs  users.rs
